# k-NN

./: .codecov.yml  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PerformanceTuning.md  README.md  RFC.md  build.gradle  docker-compose.yml  gradle.properties  opendistro-elasticsearch-knn.release-notes.md  settings.gradle
.envs/: .elasticsearch
.github/: draft-release-notes-config.yml
.github/workflows/: CD.yml  CI-docker-sanity.yml  CI.yml  draft-release-notes-workflow.yml  test-workflow.yml
build-tools/: knnplugin-coverage.gradle  repositories.gradle
checkstyle/: checkstyle.xml
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt
jni/faiss/: CMakeLists.txt
jni/faiss/include/: com_amazon_opendistroforelasticsearch_knn_index_faiss_v165_KNNFaissIndex.h
jni/faiss/src/: com_amazon_opendistroforelasticsearch_knn_index_faiss_v165_KNNFaissIndex.cpp
jni/include/: com_amazon_opendistroforelasticsearch_knn_index_nmslib_KNNIndex.h  com_amazon_opendistroforelasticsearch_knn_index_nmslib_v2011_KNNIndex.h  com_amazon_opendistroforelasticsearch_knn_index_nmslib_v2011_KNNNmsLibIndex.h  com_amazon_opendistroforelasticsearch_knn_index_nmslib_v208_KNNIndex.h  com_amazon_opendistroforelasticsearch_knn_index_v1736_KNNIndex.h  com_amazon_opendistroforelasticsearch_knn_index_v2011_KNNIndex.h  com_amazon_opendistroforelasticsearch_knn_index_v206_KNNIndex.h  com_amazon_opendistroforelasticsearch_knn_index_v208_KNNIndex.h  jni_util.h
jni/nmslib/: CMakeLists.txt
jni/nmslib/include/: com_amazon_opendistroforelasticsearch_knn_index_nmslib_v2011_KNNNmsLibIndex.h
jni/nmslib/src/: com_amazon_opendistroforelasticsearch_knn_index_nmslib_v2011_KNNNmsLibIndex.cpp
jni/src/: com_amazon_opendistroforelasticsearch_knn_index_nmslib_KNNIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_nmslib_v2011_KNNIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_nmslib_v2011_KNNNmsLibIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_nmslib_v208_KNNIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_v1736_KNNIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_v2011_KNNIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_v206_KNNIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_v208_KNNIndex.cpp  jni_util.cpp
jni/src/v1736/: com_amazon_opendistroforelasticsearch_knn_index_v1736_KNNIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_v1736_KNNIndex.h  org_elasticsearch_index_knn_v1736_KNNIndex.cpp  org_elasticsearch_index_knn_v1736_KNNIndex.h
jniFaiss/: CMakeLists.txt
jniFaiss/include/: com_amazon_opendistroforelasticsearch_knn_index_faiss_KNNFIndex.h  com_amazon_opendistroforelasticsearch_knn_index_faiss_v164_KNNFIndex.h  com_amazon_opendistroforelasticsearch_knn_index_faiss_v165_KNNFIndex.h  com_amazon_opendistroforelasticsearch_knn_index_faiss_v165_KNNFaissIndex.h
jniFaiss/src/: com_amazon_opendistroforelasticsearch_knn_index_faiss_KNNFIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_faiss_v164_KNNFIndex.cpp  com_amazon_opendistroforelasticsearch_knn_index_faiss_v165_KNNFIndex.cpp
release-notes/: opendistro-elasticsearch-knn.release-notes-1.2.0.0-alpha.1.md  opendistro-elasticsearch-knn.release-notes-1.3.0.md  opendistro-elasticsearch-knn.release-notes-1.4.0.md  opendistro-elasticsearch-knn.release-notes-1.6.0.md  opendistro-elasticsearch-knn.release-notes-1.7.0.md  opendistro-elasticsearch-knn.release-notes-1.8.0.md  opendistro-elasticsearch-knn.release-notes-1.9.0.0.md  opendistro-elasticsearch-knn.release-notes-1.9.0.md  opendistro-for-elasticsearch-knn.release-notes-1.10.0.0.md  opendistro-for-elasticsearch-knn.release-notes-1.10.1.0.md  opendistro-for-elasticsearch-knn.release-notes-1.11.0.0.md  opendistro-for-elasticsearch-knn.release-notes-1.12.0.0.md  opendistro-for-elasticsearch-knn.release-notes-1.13.0.0.md
src/main/java/com/amazon/opendistroforelasticsearch/knn/common/: KNNConstants.java
src/main/java/com/amazon/opendistroforelasticsearch/knn/index/: IndexUtil.java  KNNCircuitBreaker.java  KNNEncoder.java  KNNIndex.java  KNNIndexCache.java  KNNIndexFileListener.java  KNNIndexShard.java  KNNMethod.java  KNNMethodContext.java  KNNQuery.java  KNNQueryBuilder.java  KNNQueryResult.java  KNNScorer.java  KNNSettings.java  KNNVectorDVLeafFieldData.java  KNNVectorFieldMapper.java  KNNVectorIndexFieldData.java  KNNVectorScriptDocValues.java  KNNWeight.java  MethodComponent.java  MethodComponentContext.java  MethodParameter.java  Parameter.java  SpaceType.java  SpaceTypes.java  VectorField.java
src/main/java/com/amazon/opendistroforelasticsearch/knn/plugin/: KNNCodecService.java  KNNEngineFactory.java  KNNPlugin.java
src/main/java/org/elasticsearch/index/knn/: KNNIndexCache.java  KNNIndexFileListener.java  KNNQuery.java  KNNQueryBuilder.java  KNNQueryResult.java  KNNScorer.java  KNNVectorFieldMapper.java  KNNWeight.java  VectorField.java
src/main/java/org/elasticsearch/index/knn/codec/: BinaryDocValuesSub.java  KNNBinaryDocValues.java  KNNCodec.java  KNNCompoundFormat.java  KNNDocValuesConsumer.java  KNNDocValuesFormat.java  KNNDocValuesReader.java
src/main/java/org/elasticsearch/index/knn/util/: NmsLibVersion.java
src/main/java/org/elasticsearch/index/knn/v1736/: KNNIndex.java
src/main/java/org/elasticsearch/plugin/knn/: KNNPlugin.java
src/main/plugin-metadata/: plugin-security.policy
src/test/java/com/amazon/opendistroforelasticsearch/knn/: KNNRestTestCase.java  KNNResult.java  KNNSingleNodeTestCase.java  KNNTestCase.java  ODFERestTestCase.java
src/test/java/com/amazon/opendistroforelasticsearch/knn/index/: BaseKNNIntegTestIT.java  KNN80HnswIndexIT.java  KNN80HnswIndexTests.java  KNNCircuitBreakerIT.java  KNNESIT.java  KNNESSettingsTestIT.java  KNNHnswIndexIT.java  KNNIndexCacheTests.java  KNNIndexShardTests.java  KNNJNIFaissTests.java  KNNJNIIT.java  KNNJNINmsLibTests.java  KNNJNITests.java  KNNJNITestsIT.java  (+14 more)
src/test/java/org/elasticsearch/index/knn/: KNNESIT.java  KNNHnswIndexIT.java  KNNJNIIT.java  KNNMapperSearcherIT.java  KNNQueryBuilderTests.java
(+115 files in other folders)
